--- a/page2.html
+++ b/page2.html
@@ -4,17 +4,6 @@
     <meta charset="UTF-8">
     <title>Succeed!</title>
 </head>
-<style>
-    h3 {
-        color:brown
-    }
-    li {
-        color:grey
-    }
-    #bloc1 {
-        background-color:purple
-    }
-</style>
 <body>
 
 <h1 style="color:blue"> Livre 1</h1>
@@ -26,7 +15,7 @@
 <br>
 <p>
     Sa <i>Majesté</i> descendit à la belle <a href="https://fr.wikipedia.org/wiki/%C3%89glise_(%C3%A9difice)" target="blank">église</a> neuve qui ce jour-là était parée de tous ses rideaux cramoisis.
-<div id="bloc1">Le roi devait dîner, et aussitôt après remonter en voiture pour aller vénérer la célèbre relique de saint Clément.</div>
+<div>Le roi devait dîner, et aussitôt après remonter en voiture pour aller vénérer la célèbre relique de saint Clément.</div>
     À peine le roi fut-il à l’église, que Julien galopa vers la maison de M. de <sup>Rênal</sup>.
     Là, il quitta en <em>soupirant son bel habit bleu de ciel</em>, son sabre, ses épaulettes, pour reprendre le petit habit noir râpé.
     Il remonta à <del>cheval</del>, et en quelques instants fut à Bray-le-Haut qui occupe le sommet d’une fort belle colline.
