--- a/index.html
+++ b/index.html
@@ -6,25 +6,26 @@
 </head>
 <body>
 
-<h1 style="background-color:pink"> Menu:</h1>
-<hr>
-<ol type="I">
-    <li> <a href="page2.html" target="blank"> Livre 1</a></li>
-    <li> Livre 2</li>
-    <li> Livre 3</li>
-    <li> Livre 4</li>
-    <li> Livre 5</li>
-</ol>
-<hr>
-<ol Type="A">
-    <li> Chanson 1</li>
-    <li> Chanson 2</li>
-    <li> Chanson 3</li>
-    <li> Chanson 4</li>
-    <li> Chanson 5</li>
-</ol>
-<hr>
-
-
+    <h1 style="background-color:pink"> Menu:</h1>
+    <hr>
+    <ol type="I">
+        <li>
+            <a href="page2.html" target="blank"> Livre 1</a>
+        </li>
+        <li> Livre 2</li>
+        <li> Livre 3</li>
+        <li> Livre 4</li>
+        <li> Livre 5</li>
+    </ol>
+    <hr>
+    <ol Type="A">
+        <li> Chanson 1</li>
+        <li> Chanson 2</li>
+        <li> Chanson 3</li>
+        <li> Chanson 4</li>
+        <li> Chanson 5</li>
+    </ol>
+    <hr>
+    
 </body>
 </html>
