--- a/page2.html
+++ b/page2.html
@@ -6,74 +6,84 @@
 </head>
 <body>
 
-<h1 style="color:blue"> Livre 1</h1>
-<h2 title="Nom du livre"> Sa majesté</h2>
-<h3> De rivp blok</h3>
+    <h1 style="color:blue"> Livre 1</h1>
+    <h2 title="Nom du livre"> Sa majesté</h2>
+    <h3> De rivp blok</h3>
 
-<img src="https://tse4.explicit.bing.net/th?id=OIP.dqSf5bdbIwgoyJffqAGHJgHaFj&pid=Api&P=0&w=204&h=154" alt="livre" width="250" height="150">
-<figcaption> Légende pour la photo du livre</figcaption>
-<br>
-<p>
-    Sa <i>Majesté</i> descendit à la belle <a href="https://fr.wikipedia.org/wiki/%C3%89glise_(%C3%A9difice)" target="blank">église</a> neuve qui ce jour-là était parée de tous ses rideaux cramoisis.
-<div>Le roi devait dîner, et aussitôt après remonter en voiture pour aller vénérer la célèbre relique de saint Clément.</div>
-    À peine le roi fut-il à l’église, que Julien galopa vers la maison de M. de <sup>Rênal</sup>.
-    Là, il quitta en <em>soupirant son bel habit bleu de ciel</em>, son sabre, ses épaulettes, pour reprendre le petit habit noir râpé.
-    Il remonta à <del>cheval</del>, et en quelques instants fut à Bray-le-Haut qui occupe le sommet d’une fort belle colline.
-    L’enthousiasme <strong>multiplie</strong> ces paysans, pensa Julien. On ne peut se remuer à Verrières, et en voici plus de dix mille autour de cette antique abbaye.
-    À moitié ruinée par le vandalisme révolutionnaire, elle avait été magnifiquement rétablie à <time>10h</time>.
-<br>
-<span style="color:orange">Dans une petite ville de l’Aveyron ou des Pyrénées, le moindre incident eût été rendu décisif par le feu du climat.</span>
-  <br>
-Sous nos cieux plus sombres, un jeune homme pauvre, et qui n’est qu’<dfn>ambitieux</dfn> parce que la délicatesse de son cœur lui fait un besoin de quelques-unes des jouissances que donne l’argent,
+    <img src="https://tse4.explicit.bing.net/th?id=OIP.dqSf5bdbIwgoyJffqAGHJgHaFj&pid=Api&P=0&w=204&h=154" alt="livre" width="250" height="150">
+    <figcaption> Légende pour la photo du livre</figcaption>
+    
+    <br>
+    
+    <p>
+        Sa <i>Majesté</i> descendit à la belle <a href="https://fr.wikipedia.org/wiki/%C3%89glise_(%C3%A9difice)" target="blank">église</a> neuve qui ce jour-là
+        était parée de tous ses rideaux cramoisis.
+        <div style="color:red">
+            Le roi devait dîner, et aussitôt après remonter en voiture pour aller vénérer la célèbre relique de saint Clément.
+        </div>
+        À peine le roi fut-il à l’église, que Julien galopa vers la maison de M. de <sup>Rênal</sup>.
+        Là, il quitta en <em>soupirant son bel habit bleu de ciel</em>, son sabre, ses épaulettes, pour reprendre le petit habit noir râpé.
+        Il remonta à <del>cheval</del>, et en quelques instants fut à Bray-le-Haut qui occupe le sommet d’une fort belle colline.
+        L’enthousiasme <strong>multiplie</strong> ces paysans, pensa Julien. On ne peut se remuer à Verrières, et en voici plus de dix mille autour de cette antique abbaye.
+        À moitié ruinée par le vandalisme révolutionnaire, elle avait été magnifiquement rétablie à <time>10h</time>.
+    <br>
+        <span style="color:orange">
+            Dans une petite ville de l’Aveyron ou des Pyrénées, le moindre incident eût été rendu décisif par le feu du climat.
+        </span>
+    <br>
+        Sous nos cieux plus sombres, un jeune homme pauvre, et qui n’est qu’<dfn>ambitieux</dfn> parce que la délicatesse de son cœur lui fait un besoin de quelques-unes
+    des jouissances que donne l’argent,
 
-<ul>
-    <li>voit tous les jours une femme de trente ans,</li>
-    <li>sincèrement sage,</li>
-    <li>occupée de ses enfants,</li>
-    <li>et qui ne prend nullement dans les romans des exemples de conduite.</li>
-</ul>
-<blockquote>Tout va lentement, tout se fait peu à peu dans les provinces, il y a plus de naturel.</blockquote>
+         <ul>
+            <li>voit tous les jours une femme de trente ans,</li>
+            <li>sincèrement sage,</li>
+            <li>occupée de ses enfants,</li>
+            <li>et qui ne prend nullement dans les romans des exemples de conduite.</li>
+        </ul>
+        <blockquote>Tout va lentement, tout se fait peu à peu dans les provinces, il y a plus de naturel.</blockquote>
 
-    La petite ville de Verrières peut passer <cite>pour l’une des plus jolies de la Franche-Comté.</cite>
-<div style="background-color:green">Ses maisons blanches avec leurs toits pointus de tuiles rouges s’étendent sur la pente d’une colline, dont des touffes de vigoureux châtaigniers marquent les moindres sinuosités.</div>
-    Le Doubs coule à quelques centaines de pieds au-dessous de ses fortifications bâties jadis par les Espagnols, et maintenant ruinées.
+        La petite ville de Verrières peut passer <cite>pour l’une des plus jolies de la Franche-Comté.</cite>
+        <div style="background-color:green">
+            Ses maisons blanches avec leurs toits pointus de tuiles rouges s’étendent sur la pente d’une colline, dont des touffes de vigoureux châtaigniers marquent
+            les moindres sinuosités.
+        </div>
+        Le Doubs coule à quelques centaines de pieds au-dessous de ses fortifications bâties jadis par les Espagnols, et maintenant ruinées.
 
-</p>
+    </p>
 
-<p>
-    <q cite="https://citation-celebre.leparisien.fr/citations/52005">Exige beaucoup de toi-même et attends peu des autres. Ainsi beaucoup d'ennuis te seront épargnés.</q>
-</p>
+    <p>
+        <q cite="https://citation-celebre.leparisien.fr/citations/52005">Exige beaucoup de toi-même et attends peu des autres. Ainsi beaucoup d'ennuis te seront épargnés.</q>
+    </p>
 
-<table border="6" cellspacing="5" cellpadding="5" bordercolor="red" bgcolor="grey" width="300" heigth="400">
-    <tr>
-        <td> Avis</td>
-        <td> Note</td>
-    </tr>
-    <tr>
-        <td> Très bon livre, instructif, permet d'apprendre des choses avec beaucoup<br> de descriptions qui permet de nous mettre dedans </td>
-        <td>Je mettrais un 7/10. </td>
-    </tr>
-</table>
+    <table border="6" cellspacing="5" cellpadding="5" bordercolor="red" bgcolor="grey" width="300" heigth="400">
+        <tr>
+            <td> Avis</td>
+            <td> Note</td>
+        </tr>
+        <tr>
+            <td> Très bon livre, instructif, permet d'apprendre des choses avec beaucoup<br> de descriptions qui permet de nous mettre dedans </td>
+            <td>Je mettrais un 7/10. </td>
+        </tr>
+    </table>
 
-<br>
+    <br>
 
+    <label> Mon avis sur le livre:</label>
+    <progress max="100" value="50"> 50%</progress>
 
-<label> Mon avis sur le livre:</label>
-<progress max="100" value="50"> 50%</progress>
+    <br>
 
-<br>
+    <audio controls>
+        <source src="https://youtu.be/xLT68OFRjmo">
+        <p> Votre navigateur ne prend pas en charge l'audio HTML</p>
+    </audio>
 
-<audio controls>
-    <source src="https://youtu.be/xLT68OFRjmo">
-    <p> Votre navigateur ne prend pas en charge l'audio HTML</p>
-</audio>
+    <br>
 
-<br>
-
-<video width="300" height="200" controls>
-    <source src="https://www.youtube.com/embed/xLT68OFRjmo" >
-    <p> Votre navigateur ne prend pas en charge la vidéo</p>
-</video>
+    <video width="300" height="200" controls>
+        <source src="https://www.youtube.com/embed/xLT68OFRjmo" >
+        <p> Votre navigateur ne prend pas en charge la vidéo</p>
+    </video>
 
 </body>
 </html>
